@@ -689,8 +689,6 @@ dnl legacy
 AC_IPMI_MONITORING_SENSOR_CONFIG_FILE
 dnl legacy
 AC_IPMIPOWER_CONFIG_FILE
-dnl legacy
-AC_IPMICONSOLE_CONFIG_FILE
 AC_INTERPRET_SENSOR_CONFIG_FILE
 AC_INTERPRET_SEL_CONFIG_FILE
 AC_IPMIDETECT_CONFIG_FILE
