@@ -30,6 +30,11 @@ o Remove legacy command line options in ipmipower
   - --ipmi-version (--driver-type since 0.7.1)
   - --retry-wait-timeout (--retransmission-wait-timeout since 0.5.1)
   - --retry-backoff-count (--retransmission-backoff-count since 0.5.1)
+o Remove legacy config file support for ipmiconsole (use freeipmi.conf)
+o Remove legacy config file options in ipmiconsole
+  - escape-char (use ipmiconsole-escape-char)
+  - dont-steal (use ipmiconsole-dont-steal)
+  - lock-memory (use ipmiconsole-lock-memory)
 o Remove legacy command line options in ipmi-sensors
   - --sensors (use --record-ids)
   - --group (use --sensor-types)
