@@ -37,6 +37,14 @@
 
 	* ipmi-sel: Remove legacy option --delete-all.
 
+	* ipmiconsole: Remove support of legacy /etc/ipmiconsole.conf file.
+
+	* configure.ac: Remove legacy /etc/ipmiconsole.conf file support.
+
+	* common/toolcommon/tool-config-file-common.c: Remove legacy ipmiconsole config file support.
+
+	* config/ac_ipmiconsole_config_file.m4: Removed file.
+
 2020-01-28 Albert Chu <chu11@llnl.gov>
 
 	* man/ipmi-oem.8.pre.in: Fix formatting typo that led to line not
